--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,24 +1,20 @@
 {% load static %}
+{% load common_tags %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static '/base/css/light.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static '/users/login/css/style.css' %}">
         <title>BalonPOS Login</title>
     </head>
     <body class="text-center">
-        {% if messages %}
-            <div class="alert alert-danger" role="alert">
-                Your username and password didn't match. Please try again.
-            </div>
-        {% endif %}
         <div class="modal">
             <form class='form-signin' method="post" action="{% url 'login' %}">
                 {% csrf_token %}
                 <img class="mb-4" src="{% static 'users/login/images/logo.png' %}" alt="" width="300" height="129">
-                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                <h2 class="mb-3">Please sign in</h2>
                 <input type="text" id="id_username" name="username" class="form-control mb-1" placeholder="Username" required autofocus>
                 <input type="password" id="id_password" name="password" class="form-control mt-1 mb-4" placeholder="Password" required>
 
@@ -26,7 +22,14 @@
                 <input type="hidden" name="next" value="{{ next }}">
             </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="{% static '/base/js/app.js' %}"></script>
+        {% if messages %}
+            {% for message in messages %}
+                {% autoescape off %}
+                    {% message_to_notyf message 'center' 'top' %}
+                {% endautoescape %}
+            {% endfor %}
+        {% endif %}
     </body>
 </html>
 
