--- a/templates/inventory/overview.html
+++ b/templates/inventory/overview.html
@@ -1,9 +1,49 @@
 {%  extends 'base/base.html' %}
 {% load static %}
 
+{% block template_head %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Datatable related CSS & JS -->
+    <script type="text/javascript" charset="utf8" src="{% static '/ajax_datatable/js/utils.js' %}"></script>
+    <script type="text/javascript" charset="utf8" src="{% static 'base/js/datatables.js' %}"></script>
+	<link href="{% static 'base/css/datatables.css' %}" rel="stylesheet">
+
+{% endblock template_head %}
+
 {% block content %}
     <div class="container-fluid p-0">
         <h1 class="h3 mb-3">Vehicles</h1>
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">
+                    Inventory
+                </h5>
+                <h6 class="card-subtitle text-muted">Searches the database for all vehicles stored in inventory.</h6>
+            </div>
 
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="inventory_table" class="table table-striped">
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock content %}
+
+{% block template_body %}
+    <script>
+        $(document).ready(function() {
+            AjaxDatatableViewUtils.initialize_table(
+                $('#inventory_table'),
+                "{% url 'inventory:inventory_table' %}",
+                {
+                    processing: false,
+                    autoWidth: false,
+                    full_row_select: false,
+                    scrollX: false
+                }
+            );
+        });
+    </script>
+{% endblock template_body %}
