--- a/templates/inventory/vehicle.html
+++ b/templates/inventory/vehicle.html
@@ -4,15 +4,16 @@
 
 {% block template_head %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Select2 style & scripts -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="/static/misc/select2/css/select2.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-        <style>
+    <script src="/static/django_select2/django_select2.js"></script>
+    <script src="/static/misc/select2/js/autofocus.js"></script>
+    <!-- Page specific styling -->
+    <style>
         .nav-item button {
             width: 100%;
-        }
-
-        label, span.select2 {
-            width: 100% !important;
         }
     </style>
 {% endblock template_head %}
