--- a/templates/inventory/overview.html
+++ b/templates/inventory/overview.html
@@ -44,7 +44,7 @@
         $(document).ready(function() {
             AjaxDatatableViewUtils.initialize_table(
                 $('#inventory_table'),
-                "{% url 'inventory:inventory_table' %}",
+                "{% url 'inventory:tableInventory' %}",
                 {
                     processing: false,
                     autoWidth: false,
