--- a/templates/inventory/overview.html
+++ b/templates/inventory/overview.html
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="card-header">
                 <h5 class="card-title">
-                    Inventory
+                    Current Inventory
                 </h5>
                 <h6 class="card-subtitle text-muted">Searches the database for all vehicles stored in inventory.</h6>
             </div>
@@ -32,6 +32,21 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <table id="inventory_table" class="table table-striped">
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">
+                    Sold Vehicles
+                </h5>
+                <h6 class="card-subtitle text-muted">Searches the database for all vehicles stored in inventory.</h6>
+            </div>
+
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="sold_table" class="table table-striped">
                     </table>
                 </div>
             </div>
@@ -45,6 +60,17 @@
             AjaxDatatableViewUtils.initialize_table(
                 $('#inventory_table'),
                 "{% url 'inventory:tableInventory' %}",
+                {
+                    processing: false,
+                    autoWidth: false,
+                    full_row_select: false,
+                    scrollX: false
+                }
+            );
+
+            AjaxDatatableViewUtils.initialize_table(
+                $('#sold_table'),
+                "{% url 'inventory:tableSold' %}",
                 {
                     processing: false,
                     autoWidth: false,
