Added registration view to see outstanding registrations. Added HTML/CSS for registrations view. Created outstanding registrations table. Added URL routing for registrations app, outstanding registrations table and registrations overview. Refactored view names for inventory app. Refactored form ID's for vehicle & customer form. Registrations are now associated with sales orders.

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -94,8 +94,8 @@
                                     </a>
                                 </li>
 
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" href="">
+                                <li class="sidebar-item {% if app_name == 'registrations' and url_name == 'viewOverview' %}active{% endif %}">
+                                    <a class="sidebar-link" href="{% url 'registrations:viewOverview' %}">
                                         <i class="align-middle" data-feather="paperclip"></i> <span class="align-middle">Registrations</span>
                                     </a>
                                 </li>
