--- a/templates/registrations/overview.html
+++ b/templates/registrations/overview.html
@@ -1,5 +1,6 @@
-{%  extends 'base/base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block template_head %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -7,6 +8,11 @@
     <script type="text/javascript" charset="utf8" src="{% static '/ajax_datatable/js/utils.js' %}"></script>
     <script type="text/javascript" charset="utf8" src="{% static 'base/js/datatables.js' %}"></script>
 	<link href="{% static 'base/css/datatables.css' %}" rel="stylesheet">
+    <!-- Select2 style & scripts -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="/static/misc/select2/css/select2.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="/static/django_select2/django_select2.js"></script>
     <!-- Used for datatable action icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/6.7.96/css/materialdesignicons.min.css" integrity="sha512-q0UoFEi8iIvFQbO/RkDgp3TtGAu2pqYHezvn92tjOq09vvPOxgw4GHN3aomT9RtNZeOuZHIoSPK9I9bEXT3FYA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Page specific styling -->
@@ -32,25 +38,67 @@
                     {% for key, value in customer_data.items %}
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button accordion-button-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_{{ value }}" aria-expanded="true" aria-controls="collapse_{{ value }}">
+                                <button class="accordion-button accordion-button-sm collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_{{ value|get_item:'pk' }}" aria-expanded="false" aria-controls="collapse_{{ value }}">
                                     {{ key }}
                                 </button>
                             </h2>
-                            <div id="collapse_{{ value}}" class="accordion-collapse show" aria-labelledby="heading_{{ value }}">
+                            <div id="collapse_{{ value|get_item:'pk' }}" class="accordion-collapse collapse" aria-labelledby="heading_{{ value|get_item:'pk' }}">
                                 <div class="accordion-body py-3">
                                     <div class="table-responsive">
-                                        <table id="inventory_table_{{ value }}" class="table table-striped">
+                                        <table id="inventory_table_{{ value|get_item:'pk' }}" class="table table-striped">
                                         </table>
                                     </div>
                                 </div>
                                 <div class="accordion-body py-1 pb-3">
                                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                        <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#requestModal_{{ value }}">
+                                        <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#requestModal_{{ value|get_item:'pk' }}">
                                             Request Registrations
                                         </button>
-                                        <button type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#receiveModal_{{ value }}">
+                                        <button type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#receiveModal_{{ value|get_item:'pk' }}">
                                             Mark Received
                                         </button>
+                                    </div>
+                                    <div class="modal fade" id="requestModal_{{ value|get_item:'pk' }}" aria-labelledby="requestModalLabel_{{ value|get_item:'pk' }}" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="requestModalLabel_{{ value|get_item:'pk' }}">Request Registrations</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <form id="form_request_{{ value|get_item:'pk' }}" method="post">
+                                                    <div class="modal-body">
+                                                        {% with request_form=value|get_item:'request_form' %}
+                                                            {% crispy request_form %}
+                                                        {% endwith %}
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                        <button type="submit" class="btn btn-primary">Request Registrations</button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="modal fade" id="receiveModal_{{ value|get_item:'pk' }}" aria-labelledby="receiveModalLabel_{{ value|get_item:'pk' }}" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="receiveModalLabel_{{ value|get_item:'pk' }}">Receive Registrations</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <form id="form_receive_{{ value|get_item:'pk' }}" method="post">
+                                                    <div class="modal-body">
+                                                        {% with receive_form=value|get_item:'receive_form' %}
+                                                            {% crispy receive_form %}
+                                                        {% endwith %}
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                        <button type="submit" class="btn btn-success">Receive Registrations</button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -82,15 +130,16 @@
         {% for key, value in customer_data.items %}
             $(document).ready(function() {
                 AjaxDatatableViewUtils.initialize_table(
-                    $('#inventory_table_{{ value }}'),
+                    $('#inventory_table_{{ value|get_item:'pk' }}'),
                     "{% url 'registrations:tableOutstanding' %}",
                     {
                         processing: false,
                         autoWidth: false,
                         full_row_select: false,
-                        scrollX: false
+                        scrollX: false,
+                        searching: false,
                     }, {
-                        customer_number: '{{ value }}',
+                        customer_number: '{{ value|get_item:'pk' }}',
                     }
                 );
             });
